--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
     "license": "GPL-3.0",
     "require": {
         "php": ">=5.4.36",
-        "zendframework/zendframework": ">=2.3.0",
-        "doctrine/doctrine-orm-module": "0.8.*"
+        "doctrine/annotations": "*"
     },
     "autoload": {
         "psr-0": {
