--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "annotation"
     ],
     "license": "GPL-3.0",
+	"minimum-stability": "dev",
     "require": {
         "php": ">=5.4.36",
         "doctrine/annotations": "*"
